# telegram

./: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
.github/workflows/: build.yml
src/itmogus/: errors.py  logging.py  result.py
src/itmogus/app/: errors.py  main.py  middleware.py
src/itmogus/core/: __init__.py  config.py  storage.py
src/itmogus/github/: __init__.py  client.py  errors.py
src/itmogus/modules/admin/: __init__.py  handlers.py
src/itmogus/modules/exam/: __init__.py  errors.py  handlers.py  models.py  repository.py  state.py
src/itmogus/modules/invite/: __init__.py  errors.py  github.py  handlers.py
src/itmogus/modules/sync/: __init__.py  github.py  handlers.py
src/itmogus/modules/users/: __init__.py  auth.py  errors.py  handlers.py  models.py  repository.py
src/itmogus/sheets/: __init__.py  cache.py  errors.py  sheet.py  url.py
tests/: conftest.py
tests/integration/: test_reference_headers.py
