[project]
name = "itmogus"
version = "0.2.0"
description = "Telegram bot for C++ course management"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.0",
    "aiogoogle>=5.17,<6",
    "tenacity>=9.0",
    "google-auth>=2.0",
    "aiohttp>=3.0",
    "qrcode[pil]>=7.0",
    "python-dotenv>=1.0",
    "cachetools>=5.0",
    "rapidfuzz>=3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
    "ty>=0.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests using live external dependencies",
]

[tool.ruff]
line-length = 120

[tool.ty.environment]
python-version = "3.14"
